--- a/k8s-manifest/deployment.yaml
+++ b/k8s-manifest/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: react-app:v1
+          image: asauer/react:latest
           ports:
             - containerPort: 3000
           envFrom:
