--- a/k8s-manifest/secret.yaml
+++ b/k8s-manifest/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: react-app-secret
 type: Opaque
 data:
-  API_KEY: <Base64 encoded API key>
-  API_SECRET: <Base64 encoded API secret>
+  API_KEY: YWRtaW4K
+  API_SECRET: cGFzc3dvcmQK
