--- a/k8s-manifest/deployment.yaml
+++ b/k8s-manifest/deployment.yaml
@@ -16,9 +16,9 @@ spec:
         - name: react-app
           image: asauer/react:latest
           ports:
-            - containerPort: 3000
-          envFrom:
-            - configMapRef:
-                name: react-app-config
-            - secretRef:
-                name: react-app-secret
+            - containerPort: 80 
+#          envFrom:
+#            - configMapRef:
+#                name: react-app-config
+#            - secretRef:
+#                name: react-app-secret
